tests/baselines/reference/esmModuleExports3.errors.txt
/importer-cjs.cjs(2,5): error TS1362: 'Foo' cannot be used as a value because it was exported using 'export type'.
/importer-cts.cts(2,5): error TS1362: 'Foo' cannot be used as a value because it was exported using 'export type'.
/importer-cts.cts(5,5): error TS1362: 'Foo2' cannot be used as a value because it was exported using 'export type'.
/importer-cts.cts(8,5): error TS1362: 'Foo3' cannot be used as a value because it was exported using 'export type'.
/importer-cts.cts(10,10): error TS2614: Module '"./exporter.mjs"' has no exported member 'Oops'. Did you mean to use 'import Oops from "./exporter.mjs"' instead?


==== /importer-cjs.cjs (1 errors) ====
    const Foo = require("./exporter.mjs");
    new Foo();
        ~~~
!!! error TS1362: 'Foo' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 /exporter.mts:2:15: 'Foo' was exported here.
    
==== /importer-cts.cts (4 errors) ====
    import Foo = require("./exporter.mjs");
    new Foo();
        ~~~
!!! error TS1362: 'Foo' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 /exporter.mts:2:15: 'Foo' was exported here.
    
    import Foo2 from "./exporter.mjs";
    new Foo2();
        ~~~~
!!! error TS1362: 'Foo2' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 /exporter.mts:2:15: 'Foo2' was exported here.
    
    import * as Foo3 from "./exporter.mjs";
    new Foo3();
        ~~~~
!!! error TS1362: 'Foo3' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 /exporter.mts:2:15: 'Foo3' was exported here.
    
    import { Oops } from "./exporter.mjs";
             ~~~~
!!! error TS2614: Module '"./exporter.mjs"' has no exported member 'Oops'. Did you mean to use 'import Oops from "./exporter.mjs"' instead?
    
==== /exporter.mts (0 errors) ====
    export default class Foo {}
    export type { Foo as "module.exports" }
    